[package]
name = "ecommerce_store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2"
actix-web = "4.4.0"
sqlx = { version = "0.7.1", features = ["runtime-async-std", "postgres"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
dotenv = "0.15"
env_logger = "0.10.0"
serde_json = "1"