[package]
name = "ecommerce_store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.5"
actix-web = "4.4.0"
sqlx = { version = "0.7.2", features = ["runtime-async-std", "postgres", "macros", "time", "chrono" ] }
chrono = "0.4.31"
sqlx-postgres = "0.7.2"
rust_decimal = "1.32.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.107", features = ["derive"] }
serde_json = "1.0.107"
bigdecimal = "0.4"
dotenv = "0.15"
env_logger = "0.10.0"

